added sing in and sign out in the first page, now only admin is able to add new games
git-svn-id: https://svn.gemserk.com/utils/scoresserver@54 f74af82c-f8a9-4159-9544-6b194567659e

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -4,5 +4,10 @@ runtime: python
 api_version: 1
 
 handlers:
+
+- url: /newGame
+  login: admin
+  script: application.py
+
 - url: /.*
   script: application.py
