added day/week/month/year to score structure reflecting day of the year, week of the year, month of the year and year respecitevly, used to filter scores on scores query added more data to test game we create on /init added a way to generate new required data for scores invoking /updateScores url added method to dateutils to get day/week/month/year of the year modified score submit to add day/week/month/year data modified query to receive new optional parameter named range, and filter scores by day/week/month based on the new parameter

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -12,6 +12,20 @@ indexes:
 
 - kind: Score
   properties:
+  - name: day
+  - name: game
+  - name: points
+    direction: desc
+
+- kind: Score
+  properties:
+  - name: game
+  - name: month
+  - name: points
+    direction: desc
+
+- kind: Score
+  properties:
   - name: game
   - name: points
 
@@ -33,3 +47,10 @@ indexes:
   - name: tags
   - name: tags
   - name: points
+
+- kind: Score
+  properties:
+  - name: game
+  - name: week
+  - name: points
+    direction: desc
