moved get_scores method to Score class (I should create another class with all the queries abstraction instead) and modified game page to use the same query (distincts should be optional)

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -53,4 +53,10 @@ indexes:
   - name: game
   - name: week
   - name: points
+
+- kind: Score
+  properties:
+  - name: game
+  - name: week
+  - name: points
     direction: desc
