bug fix - it wasnt filtering by year when requesting scores

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -60,3 +60,9 @@ indexes:
   - name: week
   - name: points
     direction: desc
+
+- kind: Score
+  properties:
+  - name: game
+  - name: year
+  - name: points
