modified version to 4 for deployment modified app.yaml to add a new rule for entering /updateScores migration script only if the user is admin and removed that logic from handler

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -1,11 +1,15 @@
 application: gemserkscores
-version: 4-snapshot
+version: 4
 runtime: python
 api_version: 1
 
 handlers:
 
 - url: /newGame
+  login: admin
+  script: application.py
+
+- url: /updateScores
   login: admin
   script: application.py
 
