--- a/src/index.yaml
+++ b/src/index.yaml
@@ -26,6 +26,14 @@ indexes:
 
 - kind: Score
   properties:
+  - name: day
+  - name: game
+  - name: year
+  - name: points
+    direction: desc
+
+- kind: Score
+  properties:
   - name: game
   - name: month
   - name: points
@@ -41,6 +49,14 @@ indexes:
 - kind: Score
   properties:
   - name: game
+  - name: month
+  - name: year
+  - name: points
+    direction: desc
+
+- kind: Score
+  properties:
+  - name: game
   - name: points
 
 - kind: Score
@@ -81,6 +97,14 @@ indexes:
   - name: week
   - name: year
   - name: points
+
+- kind: Score
+  properties:
+  - name: game
+  - name: week
+  - name: year
+  - name: points
+    direction: desc
 
 - kind: Score
   properties:
