modified distincts to be an optional parameter, by default it is true

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -75,6 +75,13 @@ indexes:
   properties:
   - name: game
   - name: tags
+  - name: points
+    direction: desc
+
+- kind: Score
+  properties:
+  - name: game
+  - name: tags
   - name: tags
   - name: points
 
