added a handler which should remove duplicated scores by day, leaving only the best score by day, for now it receives the rangeNumber and tags parameters but it should run for all the days and not sure what to do about tags

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -12,6 +12,10 @@ handlers:
 - url: /updateScores
   login: admin
   script: application.py
+  
+- url: /removeDuplicatedDailyScores
+  login: admin
+  script: application.py
 
 - url: /.*
   script: application.py
