fixed to use self.request.get_range(day) in RemoveScoresForDayWorker to get the day as an integer not as a string

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -17,5 +17,9 @@ handlers:
   login: admin
   script: application.py
 
+- url: /removeScoresForDay
+  login: admin
+  script: application.py
+  
 - url: /.*
   script: application.py
